May 7 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Animations work in the DOS port now

May 7 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Heavily modified the material system
	* Added animation engine
	* Removed much commented outdated code
	* Removed many useless string casts
	* Added some new operator overloads fro string

May 5 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* String and save routine optimizations

May 5 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Most of script code structures and data reading routines remade
	* Some template instantiation relocations committed
	* Warning corrections

May 3 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Some possible memory leaks prevented
	* Eating corpses works again, I think
	* The Great Optimized Inventory Bug corrected
	* Other bug corrections

2002-05-01  Heikki Sairanen  <heikki.sairanen@phpoint.net>

	* Silhouette added to humanoids

May 1 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Bug corrections

May 1 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Warning corrections

May 1 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Monsters can move again
	* Some list tweaks

May 1 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Pentagram moved from menu to generation screen
	* Proto and macro systems remade
	* Some obviously shared virtual functions of proto-using classes made static
	* Pool system tweaked
	* Damage and material effect system remade
	* Many outlook tweaks
	* Message screen added to panel
	* Remade all question systems (vector, boolquestion, positionquestion, strinquestion, numberquestion etc.)
	* Felist tweaks (parameter adds etc.)
	* Consume system remade
	* Structural change: type removed
	* Resistance system added
	* Wizard info option to lookmode
	* Weight system works correctly and no one can move anymore
	* Gear drop on death and bodypart severing works may work correctly (I didn't test it)
	* Corpse and death system remade, although special monsters probably bug