@@ -1,3 +1,8 @@
+May 9 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Animations work now with SDL
+	* Wand of locking added 
+
 May 7 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Animations work in the DOS port now
